<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pb_abc_ll_main_container">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="@dimen/padding_abc_iv_rc_banner"
                android:contentDescription="@string/txt_tv_abc_banner_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/red_cross_banner_1200_px" />

            <View
                android:id="@+id/id_abc_v_rc_divider"
                android:layout_width="1dp"
                android:layout_height="@dimen/lh_abc_v_rc_divider"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="@dimen/lme_abc_v_rc_divider"
                android:layout_marginStart="@dimen/lms_abc_v_rc_divider"
                android:layout_marginTop="@dimen/lmt_abc_v_rc_divider"
                android:background="@color/bkg_abc_v_rc_divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/id_abc_v_rc_divider"
                android:fontFamily="serif"
                android:text="@string/txt_abc_tv_red"
                android:textColor="@color/tcAbcTvRed"
                android:textSize="56sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lmt_abc_tv_cross"
                android:layout_toEndOf="@id/id_abc_v_rc_divider"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/txt_abc_tv_cross"
                android:textColor="#FF0202"
                android:textSize="52sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_abc_tv_fit_fresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/txt_tv_keep_body_fit"
                android:textColor="#006e99"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/id_abc_tv_fit_fresh"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="28dp"
                    android:layout_height="1dp"
                    android:background="@color/viewBlackColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/txt_tv_yoga_center"
                    android:textColor="#FF0202"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="28dp"
                    android:layout_height="1dp"
                    android:background="@color/viewBlackColor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="100dp"
                android:layout_marginStart="56dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Morning time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5:00-8:00"
                android:textSize="18sp"
                android:textColor="#000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="end"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="100dp"
                android:layout_marginEnd="56dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Morning time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:00-8:00"
                    android:textSize="18sp"
                    android:textColor="#000"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/history_of_yoga_360_px" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#88FADAC1" />

            <TextView
                android:id="@+id/id_abc_tv_training_address"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/txt_tv_abc_training_add"
                android:textColor="#007bff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/id_abc_tv_training_address"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="18dp"
                android:text="Contact: +91 77 62 935350"
                android:textColor="#8c00ff"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/id_abc_tv_training_address"
                android:layout_marginEnd="48dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/google_plus_logo_36px" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/viewBlackColor" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/facebook_logo_36px" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/viewBlackColor" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/twitter_logo_36px" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/viewBlackColor" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/instagram_logo_36px" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>